--- a/url/image6.htm
+++ b/url/image6.htm
@@ -8,7 +8,7 @@
 <font color="#808000" size="6"><b>Copie o link abaixo:</b></font></span></p>
 <p align="center">
 
-<textarea onfocus="this.select()" onmouseover="this.focus()" rows="3" cols="36" name="a" style="font-size: 18 pt; font-weight: bold">http://www.livropublicado.com.br/images/6.png</textarea>
+<textarea onfocus="this.select()" onmouseover="this.focus()" rows="3" cols="36" name="a" style="font-size: 18 pt; font-weight: bold">https://editorafacil.github.io/SeuLivro/images/6.png</textarea>
 </p>
 
 
