--- a/url/image5.htm
+++ b/url/image5.htm
@@ -3,7 +3,7 @@
 <body>
 
 <p align="center">
-<img src="http://www.livropublicado.com.br/images/5.png" width="600" height="500"></p>
+<img src="https://editorafacil.github.io/SeuLivro/images/5.png" width="600" height="500"></p>
 <p align="center"><span style="text-transform: uppercase">
 <font color="#808000" size="6"><b>Copie o link abaixo:</b></font></span></p>
 <p align="center">
