--- a/gerador.html
+++ b/gerador.html
@@ -189,7 +189,7 @@
                                     <p align="center">
                         &nbsp;</p>
 											
-                                                <a class="button special" target="_blank" href="https://raw.githubusercontent.com/EditoraFacil/SeuLivro/gh-pages/artfonte.htm">
+                                                <a class="button special" target="_blank" href="http://www.livropublicado.com.br/artfonte.htm">
                                                 Abrir o Gerador</a></li>
 											
 											<p>Com o gerador aberto escolha o modelo que mais te agradar digite o nome do livro, observa que vai aparecer 
