--- a/url/image164.htm
+++ b/url/image164.htm
@@ -8,6 +8,5 @@
 <font color="#808000" size="6"><b>Copie o link abaixo:</b></font></span></p>
 <p align="center">
 
-<textarea onfocus="this.select()" onmouseover="this.focus()" rows="3" cols="36" name="a" style="font-size: 18 pt; font-weight: bold">
-  http://www.livropublicado.com.br/molduras/164.png</textarea>
+<textarea onfocus="this.select()" onmouseover="this.focus()" rows="3" cols="36" name="a" style="font-size: 18 pt; font-weight: bold">http://www.livropublicado.com.br/molduras/164.png</textarea>
 </p>
