--- a/autores.html
+++ b/autores.html
@@ -316,7 +316,13 @@
                             <a class="icon fa-envelope-o" href="mailto:manoel@aquivocristao.com.br?subject=Contato">Email</a></span></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>deus é amor</li>
+							<li><div align="center">
+<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- para gerador de imagens -->
+<br />
+<ins class="adsbygoogle" data-ad-client="ca-pub-8387114052511714" data-ad-format="auto" data-ad-slot="8050447671" style="display: block;"></ins><script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div></li>
 						</ul>
 					</footer>
 
