--- a/editcap/capa2.htm
+++ b/editcap/capa2.htm
@@ -17,7 +17,13 @@
 </body>
 </noframes>
 </frameset>
- 
+ <div align="center">
+<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- para gerador de imagens -->
+<br />
+<ins class="adsbygoogle" data-ad-client="ca-pub-8387114052511714" data-ad-format="auto" data-ad-slot="8050447671" style="display: block;"></ins><script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
 </html>
 
  
